Physics testing, based off of 2nd variation

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -320,7 +320,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -545,7 +545,7 @@ StreamableRenderAsset="\"Object\" "
 CameraComponent="\"Object\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [SlateAdditionalLayoutConfig]
@@ -1379,7 +1379,7 @@ bForceFrontXAxis=False
 bConvertSceneUnit=False
 
 [MessageLog]
-LastLogListing=FBXImport
+LastLogListing=PIE
 
 [DetailCategoriesAdvanced]
 FbxImportUI.Animation=True
