CLANG. Hit detection produces non-overlapping sound!
Really loud

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -569,10 +569,14 @@ PhysicalMaterial="\"Object\" "
 MaterialEditorInstanceConstant="\"Object\" "
 MaterialInstanceConstant="\"Object\" "
 MaterialInstance="\"Object\" "
+FileMediaSource="\"Object\" "
+BaseMediaSource="\"Object\" "
+MediaSource="\"Object\" "
+MediaPlayer="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/Resources/BP_FootstepAnimNotify.BP_FootstepAnimNotify
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1338,6 +1342,8 @@ WorldSettings.WorldPartition=True
 MaterialEditorInstanceConstant.ParameterGroups=True
 MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=False
+FileMediaSource.File=True
+FileMediaSource.Platforms=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1486,26 +1492,26 @@ RecentlyPlaced=/Game/Collections/DrSFinalJoin3.DrSFinalJoin3;
 RecentlyPlaced=/Game/Characters/GreatSwordPackUE5/greatswordslash_UE.greatswordslash_UE;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Resources/PM_Wood
-MRUItem1=/Game/Resources/PM_Metal
-MRUItem2=/Game/Resources/PM_Grass
-MRUItem3=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
-MRUItem4=/Game/Resources/BP_FootstepAnimNotify
-MRUItem5=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
-MRUItem6=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem8=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem9=/Game/ThirdPerson/Blueprints/CUBE
-MRUItem10=/Engine/BasicShapes/Cube
-MRUItem11=/Game/ThirdPerson/Blueprints/NewMaterial
-MRUItem12=/Game/Characters/GreatSwordPackUE5/greatswordslash_4__UE_Montage
-MRUItem13=/Game/Characters/GreatSwordPackUE5/greatswordslash_UE_Montage
-MRUItem14=/Game/Collections/Dragonslayer/OuterBlade
-MRUItem15=/Game/Collections/ChainPart
-MRUItem16=/Game/Collections/HiltBody
-MRUItem17=/Game/Collections/InnerBlade
-MRUItem18=/Game/Collections/OuterBlade
-MRUItem19=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem1=/Game/Resources/CLANG
+MRUItem2=/Game/Resources/PM_Wood
+MRUItem3=/Game/Resources/PM_Metal
+MRUItem4=/Game/Resources/PM_Grass
+MRUItem5=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
+MRUItem6=/Game/Resources/BP_FootstepAnimNotify
+MRUItem7=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
+MRUItem8=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem9=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem10=/Game/ThirdPerson/Blueprints/CUBE
+MRUItem11=/Engine/BasicShapes/Cube
+MRUItem12=/Game/ThirdPerson/Blueprints/NewMaterial
+MRUItem13=/Game/Characters/GreatSwordPackUE5/greatswordslash_4__UE_Montage
+MRUItem14=/Game/Characters/GreatSwordPackUE5/greatswordslash_UE_Montage
+MRUItem15=/Game/Collections/Dragonslayer/OuterBlade
+MRUItem16=/Game/Collections/ChainPart
+MRUItem17=/Game/Collections/HiltBody
+MRUItem18=/Game/Collections/InnerBlade
+MRUItem19=/Game/Collections/OuterBlade
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
