--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -323,7 +323,7 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Resources
+ContentBrowserTab1.SelectedPaths=/Game/Resources/SFX/Footsteps
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -573,6 +573,12 @@ FileMediaSource="\"Object\" "
 BaseMediaSource="\"Object\" "
 MediaSource="\"Object\" "
 MediaPlayer="\"Object\" "
+SoundWave="\"Object\" "
+SoundBase="\"Object\" "
+BP_ThirdPersonCharacter_C="\"Object.Actor.Tags\" "
+Character="\"Object.Actor.Tags\" "
+Pawn="\"Object.Actor.Tags\" "
+BP_ThirdPersonCharacter_Enemy_C="\"Object.Actor.Tags\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1344,6 +1350,71 @@ MaterialEditorInstanceConstant.General=True
 MaterialEditorInstanceConstant.Previewing=False
 FileMediaSource.File=True
 FileMediaSource.Platforms=True
+SoundWave.Format=True
+SoundWave.Sound=True
+SoundWave.Analysis=True
+SoundWave.Loading=True
+SoundWave.Subtitles=True
+SoundWave.Info=True
+SoundWave.File Path=True
+SoundWave.Developer=True
+SoundWave.Voice Management=True
+SoundWave.Effects=True
+SoundWave.Attenuation=True
+BP_ThirdPersonCharacter_Enemy_C.TransformCommon=True
+BP_ThirdPersonCharacter_Enemy_C.Animation=True
+BP_ThirdPersonCharacter_Enemy_C.Mesh=True
+BP_ThirdPersonCharacter_Enemy_C.Tick=True
+BP_ThirdPersonCharacter_Enemy_C.Default=True
+BP_ThirdPersonCharacter_Enemy_C.ComponentTick=True
+BP_ThirdPersonCharacter_Enemy_C.Clothing=True
+BP_ThirdPersonCharacter_Enemy_C.Physics=True
+BP_ThirdPersonCharacter_Enemy_C.Collision=True
+BP_ThirdPersonCharacter_Enemy_C.LeaderPoseComponent=True
+BP_ThirdPersonCharacter_Enemy_C.Lighting=True
+BP_ThirdPersonCharacter_Enemy_C.AnimationRig=True
+BP_ThirdPersonCharacter_Enemy_C.Deformer=True
+BP_ThirdPersonCharacter_Enemy_C.SkinWeights=True
+BP_ThirdPersonCharacter_Enemy_C.Rendering=True
+BP_ThirdPersonCharacter_Enemy_C.HLOD=True
+BP_ThirdPersonCharacter_Enemy_C.PathTracing=True
+BP_ThirdPersonCharacter_Enemy_C.Mobile=True
+BP_ThirdPersonCharacter_Enemy_C.Navigation=True
+BP_ThirdPersonCharacter_Enemy_C.RayTracing=True
+BP_ThirdPersonCharacter_Enemy_C.VirtualTexture=True
+BP_ThirdPersonCharacter_Enemy_C.Tags=True
+BP_ThirdPersonCharacter_Enemy_C.AssetUserData=True
+BP_ThirdPersonCharacter_Enemy_C.Replication=True
+BP_ThirdPersonCharacter_Enemy_C.ComponentReplication=True
+BP_ThirdPersonCharacter_Enemy_C.Activation=True
+BP_ThirdPersonCharacter_Enemy_C.Variable=True
+BP_ThirdPersonCharacter_Enemy_C.Cooking=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement (General Settings)=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement: Walking=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement: Jumping / Falling=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement (Networking)=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement: Swimming=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement: Flying=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement: Custom Movement=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement (Rotation Settings)=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement: Physics Interaction=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement: Avoidance=True
+BP_ThirdPersonCharacter_Enemy_C.RootMotion=True
+BP_ThirdPersonCharacter_Enemy_C.Character Movement: NavMesh Movement=True
+BP_ThirdPersonCharacter_Enemy_C.NavMovement=True
+BP_ThirdPersonCharacter_Enemy_C.Velocity=True
+BP_ThirdPersonCharacter_Enemy_C.PlanarMovement=True
+BP_ThirdPersonCharacter_Enemy_C.MovementComponent=True
+BP_ThirdPersonCharacter_Enemy_C.Shape=True
+BP_ThirdPersonCharacter_Enemy_C.Character=True
+BP_ThirdPersonCharacter_Enemy_C.Camera=True
+BP_ThirdPersonCharacter_Enemy_C.Pawn=True
+BP_ThirdPersonCharacter_Enemy_C.Actor=True
+BP_ThirdPersonCharacter_Enemy_C.Input=True
+BP_ThirdPersonCharacter_Enemy_C.WorldPartition=True
+BP_ThirdPersonCharacter_Enemy_C.Events=True
+BP_ThirdPersonCharacter_Enemy_C.Materials=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1470,6 +1541,7 @@ WorldSettings.WorldPartitionSetup=True
 WorldSettings.WorldPartition=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy.BP_ThirdPersonCharacter_Enemy;
 RecentlyPlaced=/Game/Characters/Mannequins/Rigs/PA_Mannequin.PA_Mannequin;
 RecentlyPlaced=/Script/Engine.DirectionalLight;
 RecentlyPlaced=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter;
@@ -1489,29 +1561,28 @@ RecentlyPlaced=/Game/Collections/DrSFinalJoin7.DrSFinalJoin7;
 RecentlyPlaced=/Game/Collections/DrSFinalJoin6.DrSFinalJoin6;
 RecentlyPlaced=/Game/Collections/DrSFinalJoin4.DrSFinalJoin4;
 RecentlyPlaced=/Game/Collections/DrSFinalJoin3.DrSFinalJoin3;
-RecentlyPlaced=/Game/Characters/GreatSwordPackUE5/greatswordslash_UE.greatswordslash_UE;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem1=/Game/Resources/CLANG
-MRUItem2=/Game/Resources/PM_Wood
-MRUItem3=/Game/Resources/PM_Metal
-MRUItem4=/Game/Resources/PM_Grass
-MRUItem5=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
-MRUItem6=/Game/Resources/BP_FootstepAnimNotify
-MRUItem7=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
-MRUItem8=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem9=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem10=/Game/ThirdPerson/Blueprints/CUBE
-MRUItem11=/Engine/BasicShapes/Cube
-MRUItem12=/Game/ThirdPerson/Blueprints/NewMaterial
-MRUItem13=/Game/Characters/GreatSwordPackUE5/greatswordslash_4__UE_Montage
-MRUItem14=/Game/Characters/GreatSwordPackUE5/greatswordslash_UE_Montage
-MRUItem15=/Game/Collections/Dragonslayer/OuterBlade
-MRUItem16=/Game/Collections/ChainPart
-MRUItem17=/Game/Collections/HiltBody
-MRUItem18=/Game/Collections/InnerBlade
-MRUItem19=/Game/Collections/OuterBlade
+MRUItem0=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem1=/Game/Resources/SFX/CLANG
+MRUItem2=/Game/Resources/BP_FootstepAnimNotify
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/Resources/CLANG
+MRUItem5=/Game/Resources/PM_Wood
+MRUItem6=/Game/Resources/PM_Metal
+MRUItem7=/Game/Resources/PM_Grass
+MRUItem8=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
+MRUItem9=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
+MRUItem10=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem11=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem12=/Game/ThirdPerson/Blueprints/CUBE
+MRUItem13=/Engine/BasicShapes/Cube
+MRUItem14=/Game/ThirdPerson/Blueprints/NewMaterial
+MRUItem15=/Game/Characters/GreatSwordPackUE5/greatswordslash_4__UE_Montage
+MRUItem16=/Game/Characters/GreatSwordPackUE5/greatswordslash_UE_Montage
+MRUItem17=/Game/Collections/Dragonslayer/OuterBlade
+MRUItem18=/Game/Collections/ChainPart
+MRUItem19=/Game/Collections/HiltBody
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -1535,6 +1606,8 @@ MRUItem19=/Game/Collections/OuterBlade
 /Game/Resources/PM_Grass.PM_Grass=1
 /Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark.MI_PrototypeGrid_TopDark=1
 /Game/Resources/PM_Wood.PM_Wood=1
+/Game/Resources/SFX/CLANG.CLANG=1
+/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy.BP_ThirdPersonCharacter_Enemy=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
