Added basic AI file, variable chase speed & animations

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -589,6 +589,10 @@ Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 K2Node_InputKey="\"Object\" "
 BlendSpace="\"Object\" "
+AP_Enemy_AI_C="\"Object\" "
+AnimGraphNode_BlendSpacePlayer="\"Object\" "
+AnimGraphNode_BlendSpaceBase="\"Object\" "
+AnimGraphNode_AssetPlayerBase="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -1520,6 +1524,16 @@ BlendSpace.Thumbnail=True
 SkeletalMeshSocket.Socket Parameters=True
 BoneProxy.Bone=True
 BoneProxy.Transforms=True
+BlendSpace.BlendSamples=True
+AP_Enemy_AI_C.RootMotion=True
+AP_Enemy_AI_C.Notifies=True
+AP_Enemy_AI_C.Montage=True
+AnimGraphNode_BlendSpacePlayer.Sync=True
+AnimGraphNode_BlendSpacePlayer.Relevancy=True
+AnimGraphNode_BlendSpacePlayer.Functions=True
+AnimGraphNode_BlendSpacePlayer.Coordinates=True
+AnimGraphNode_BlendSpacePlayer.Tag=True
+AnimGraphNode_BlendSpacePlayer.Settings=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1668,26 +1682,26 @@ RecentlyPlaced=/Game/Collections/DrSFinalJoin7.DrSFinalJoin7;
 RecentlyPlaced=/Game/Collections/DrSFinalJoin6.DrSFinalJoin6;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/AI/NewBlendSpace
-MRUItem1=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
-MRUItem4=/Game/Resources/SFX/CLANG
-MRUItem5=/Game/Resources/BP_FootstepAnimNotify
-MRUItem6=/Game/Resources/CLANG
-MRUItem7=/Game/Resources/PM_Wood
-MRUItem8=/Game/Resources/PM_Metal
-MRUItem9=/Game/Resources/PM_Grass
-MRUItem10=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
-MRUItem11=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
-MRUItem12=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem13=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem14=/Game/ThirdPerson/Blueprints/CUBE
-MRUItem15=/Engine/BasicShapes/Cube
-MRUItem16=/Game/ThirdPerson/Blueprints/NewMaterial
-MRUItem17=/Game/Characters/GreatSwordPackUE5/greatswordslash_4__UE_Montage
-MRUItem18=/Game/Characters/GreatSwordPackUE5/greatswordslash_UE_Montage
-MRUItem19=/Game/Collections/Dragonslayer/OuterBlade
+MRUItem0=/Game/ThirdPerson/AI/AP_Enemy_AI
+MRUItem1=/Game/ThirdPerson/AI/NewBlendSpace
+MRUItem2=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem5=/Game/Resources/SFX/CLANG
+MRUItem6=/Game/Resources/BP_FootstepAnimNotify
+MRUItem7=/Game/Resources/CLANG
+MRUItem8=/Game/Resources/PM_Wood
+MRUItem9=/Game/Resources/PM_Metal
+MRUItem10=/Game/Resources/PM_Grass
+MRUItem11=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
+MRUItem12=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
+MRUItem13=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem14=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem15=/Game/ThirdPerson/Blueprints/CUBE
+MRUItem16=/Engine/BasicShapes/Cube
+MRUItem17=/Game/ThirdPerson/Blueprints/NewMaterial
+MRUItem18=/Game/Characters/GreatSwordPackUE5/greatswordslash_4__UE_Montage
+MRUItem19=/Game/Characters/GreatSwordPackUE5/greatswordslash_UE_Montage
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
