AI reacts when close, attacks
Not hitbox yet

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -325,7 +325,7 @@ BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Tra
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/Characters/Mannequins/Meshes
+ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/AI
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.FavoritesAreaExpanded=False
 ContentBrowserDrawer.PathAreaExpanded=True
@@ -578,10 +578,10 @@ MediaPlayer="\"Object\" "
 SoundWave="\"Object\" "
 SoundBase="\"Object\" "
 BP_ThirdPersonCharacter_C="\"Object.Actor.Tags\" "
-Character="\"Object.Actor.Tags\" "
-Pawn="\"Object.Actor.Tags\" "
+Character=
+Pawn=
 BP_ThirdPersonCharacter_Enemy_C="\"Object.Actor.Tags\" "
-BP_EnemyAI_C="\"Object.Actor.Tags\" "
+BP_EnemyAI_C=
 PawnSensingComponent="\"Object\" "
 NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -593,12 +593,15 @@ AP_Enemy_AI_C="\"Object\" "
 AnimGraphNode_BlendSpacePlayer="\"Object\" "
 AnimGraphNode_BlendSpaceBase="\"Object\" "
 AnimGraphNode_AssetPlayerBase="\"Object\" "
+AnimGraphNode_Root="\"Object\" "
+AnimGraphNode_Slot="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI
 OpenAssetsAtExit=/Game/ThirdPerson/AI/NewBlendSpace.NewBlendSpace
+OpenAssetsAtExit=/Game/ThirdPerson/AI/AP_Enemy_AI.AP_Enemy_AI
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1534,6 +1537,12 @@ AnimGraphNode_BlendSpacePlayer.Functions=True
 AnimGraphNode_BlendSpacePlayer.Coordinates=True
 AnimGraphNode_BlendSpacePlayer.Tag=True
 AnimGraphNode_BlendSpacePlayer.Settings=True
+AP_Enemy_AI_C.Default=True
+AnimGraphNode_Root.Functions=True
+AnimGraphNode_Root.Tag=True
+AnimGraphNode_Slot.Settings=True
+AnimGraphNode_Slot.Functions=True
+AnimGraphNode_Slot.Tag=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1729,6 +1738,7 @@ MRUItem19=/Game/Characters/GreatSwordPackUE5/greatswordslash_UE_Montage
 /Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy.BP_ThirdPersonCharacter_Enemy=1
 /Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI=0
 /Game/ThirdPerson/AI/NewBlendSpace.NewBlendSpace=0
+/Game/ThirdPerson/AI/AP_Enemy_AI.AP_Enemy_AI=0
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
@@ -1807,7 +1817,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=264.000 Y=486.000
+ScreenPosition=X=-2296.000 Y=486.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
@@ -3030,4 +3040,7 @@ bMaterialQualityUsed[3]=0
 bShowGrid=True
 bDrawGrid=False
 PrimType=1
+
+[PluginBrowser]
+InstalledPlugins=WMFCodecs
 
