Water step, more aggressive AI
Also need to check on location based sound on footstep. Currently plays on 0,0,0 of player capsule

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -398,7 +398,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.SkeletalMeshes\" "
+Object="\"Object\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -583,9 +583,9 @@ Pawn=
 BP_ThirdPersonCharacter_Enemy_C="\"Object.Actor.Tags\" "
 BP_EnemyAI_C=
 PawnSensingComponent="\"Object\" "
-NavMeshBoundsVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+NavMeshBoundsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Brush="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 BrushComponent="\"Object\" "
 K2Node_InputKey="\"Object\" "
 BlendSpace="\"Object\" "
@@ -595,13 +595,18 @@ AnimGraphNode_BlendSpaceBase="\"Object\" "
 AnimGraphNode_AssetPlayerBase="\"Object\" "
 AnimGraphNode_Root="\"Object\" "
 AnimGraphNode_Slot="\"Object\" "
+Actor="\"Object\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
+InputAction="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
-OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI
 OpenAssetsAtExit=/Game/ThirdPerson/AI/NewBlendSpace.NewBlendSpace
 OpenAssetsAtExit=/Game/ThirdPerson/AI/AP_Enemy_AI.AP_Enemy_AI
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPersonCharacter
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI
+OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection.AnimNS_HitDetection
+OpenAssetsAtExit=/Game/Resources/BP_FootstepAnimNotify.BP_FootstepAnimNotify
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1543,6 +1548,20 @@ AnimGraphNode_Root.Tag=True
 AnimGraphNode_Slot.Settings=True
 AnimGraphNode_Slot.Functions=True
 AnimGraphNode_Slot.Tag=True
+BP_ThirdPersonCharacter_Enemy_C.Networking=True
+Actor.TransformCommon=True
+Actor.Rendering=True
+Actor.Replication=True
+Actor.Collision=True
+Actor.HLOD=True
+Actor.Physics=True
+Actor.Networking=True
+Actor.WorldPartition=True
+Actor.Actor=True
+BP_ThirdPersonCharacter_C.SkeletalMesh=True
+InputAction.Description=True
+InputAction.Action=True
+InputAction.Input=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1691,26 +1710,26 @@ RecentlyPlaced=/Game/Collections/DrSFinalJoin7.DrSFinalJoin7;
 RecentlyPlaced=/Game/Collections/DrSFinalJoin6.DrSFinalJoin6;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/AI/AP_Enemy_AI
-MRUItem1=/Game/ThirdPerson/AI/NewBlendSpace
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
-MRUItem5=/Game/Resources/SFX/CLANG
-MRUItem6=/Game/Resources/BP_FootstepAnimNotify
-MRUItem7=/Game/Resources/CLANG
-MRUItem8=/Game/Resources/PM_Wood
-MRUItem9=/Game/Resources/PM_Metal
-MRUItem10=/Game/Resources/PM_Grass
-MRUItem11=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
-MRUItem12=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
-MRUItem13=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem14=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem15=/Game/ThirdPerson/Blueprints/CUBE
-MRUItem16=/Engine/BasicShapes/Cube
-MRUItem17=/Game/ThirdPerson/Blueprints/NewMaterial
-MRUItem18=/Game/Characters/GreatSwordPackUE5/greatswordslash_4__UE_Montage
-MRUItem19=/Game/Characters/GreatSwordPackUE5/greatswordslash_UE_Montage
+MRUItem0=/Game/Resources/PM_Water
+MRUItem1=/Game/Resources/BP_FootstepAnimNotify
+MRUItem2=/Game/ThirdPerson/Input/Actions/IA_Jump
+MRUItem3=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
+MRUItem4=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem6=/Game/ThirdPerson/AI/AP_Enemy_AI
+MRUItem7=/Game/ThirdPerson/AI/NewBlendSpace
+MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem9=/Game/Resources/SFX/CLANG
+MRUItem10=/Game/Resources/CLANG
+MRUItem11=/Game/Resources/PM_Wood
+MRUItem12=/Game/Resources/PM_Metal
+MRUItem13=/Game/Resources/PM_Grass
+MRUItem14=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
+MRUItem15=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
+MRUItem16=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem17=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
+MRUItem18=/Game/ThirdPerson/Blueprints/CUBE
+MRUItem19=/Engine/BasicShapes/Cube
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -1739,6 +1758,8 @@ MRUItem19=/Game/Characters/GreatSwordPackUE5/greatswordslash_UE_Montage
 /Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI=0
 /Game/ThirdPerson/AI/NewBlendSpace.NewBlendSpace=0
 /Game/ThirdPerson/AI/AP_Enemy_AI.AP_Enemy_AI=0
+/Game/ThirdPerson/Input/Actions/IA_Jump.IA_Jump=1
+/Game/Resources/PM_Water.PM_Water=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
