First steps into Behavior Trees

--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -391,6 +391,8 @@ SequenceBrowser.HiddenColumns=PreviewSkeletalMesh
 SequenceBrowser.HiddenColumns=HasParentAsset
 SequenceBrowser.HiddenColumns=CurveNameList
 SequenceBrowser.HiddenColumns=Class
+AssetDialog.ThumbnailSize=2
+AssetDialog.CurrentViewType=1
 
 [EditorStartup]
 LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
@@ -398,11 +400,11 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
-DataAsset="\"Object\" \"Object.SkeletalMeshes\" "
+DataAsset="\"Object\" \"Object.Blackboard\" "
 AssetViewerSettings="\"Object\" "
 AnimSequence="\"Object\" "
 AnimSequenceBase="\"Object\" "
@@ -516,7 +518,7 @@ TcpMessagingSettings="\"Object\" "
 UdpMessagingSettings="\"Object\" "
 WmfMediaSettings="\"Object\" "
 EdGraphNode_Comment="\"Object\" "
-EdGraphNode="\"Object\" "
+EdGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
 K2Node_InputAction="\"Object\" "
 K2Node="\"Object\" "
 ABP_Manny_C="\"Object\" "
@@ -598,6 +600,17 @@ AnimGraphNode_Slot="\"Object\" "
 Actor="\"Object\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 InputAction="\"Object\" "
+BlackboardData="\"Object\" \"Object.Blackboard\" "
+BehaviorTreeGraphNode_Root="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+BehaviorTreeGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+AIGraphNode="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+BTComposite_Selector="\"Object\" "
+BTCompositeNode="\"Object\" "
+BTNode="\"Object\" "
+BTComposite_Sequence="\"Object\" "
+BTTask_MoveTo="\"Object\" "
+BTTask_BlackboardBase="\"Object\" "
+BTTaskNode="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -607,6 +620,7 @@ OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter.BP_ThirdPe
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection.AnimNS_HitDetection
 OpenAssetsAtExit=/Game/Resources/BP_FootstepAnimNotify.BP_FootstepAnimNotify
+OpenAssetsAtExit=/Game/ThirdPerson/AI/BT_Enemy_AI.BT_Enemy_AI
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1562,6 +1576,16 @@ BP_ThirdPersonCharacter_C.SkeletalMesh=True
 InputAction.Description=True
 InputAction.Action=True
 InputAction.Input=True
+BlackboardData.Parent=True
+BehaviorTreeGraphNode_Root.AI=True
+BTComposite_Selector.Composite=True
+BTComposite_Selector.Description=True
+BTComposite_Sequence.Composite=True
+BTComposite_Sequence.Description=True
+BTTask_MoveTo.Node=True
+BTTask_MoveTo.Blackboard=True
+BTTask_MoveTo.Task=True
+BTTask_MoveTo.Description=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1710,26 +1734,26 @@ RecentlyPlaced=/Game/Collections/DrSFinalJoin7.DrSFinalJoin7;
 RecentlyPlaced=/Game/Collections/DrSFinalJoin6.DrSFinalJoin6;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Resources/BP_FootstepAnimNotify
-MRUItem1=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
-MRUItem2=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem3=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem4=/Game/ThirdPerson/AI/AP_Enemy_AI
-MRUItem5=/Game/ThirdPerson/AI/NewBlendSpace
-MRUItem6=/Game/Resources/PM_Water
-MRUItem7=/Game/ThirdPerson/Input/Actions/IA_Jump
-MRUItem8=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
-MRUItem9=/Game/Resources/SFX/CLANG
-MRUItem10=/Game/Resources/CLANG
-MRUItem11=/Game/Resources/PM_Wood
-MRUItem12=/Game/Resources/PM_Metal
-MRUItem13=/Game/Resources/PM_Grass
-MRUItem14=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
-MRUItem15=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
-MRUItem16=/Game/Characters/Mannequins/Animations/ABP_Quinn
-MRUItem17=/Game/Characters/Mannequins/Meshes/SKM_Quinn_Simple
-MRUItem18=/Game/ThirdPerson/Blueprints/CUBE
-MRUItem19=/Engine/BasicShapes/Cube
+MRUItem0=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
+MRUItem1=/Game/ThirdPerson/AI/BT_Enemy_AI
+MRUItem2=/Game/ThirdPerson/AI/BBD_Enemy_AI
+MRUItem3=/Game/Resources/BP_FootstepAnimNotify
+MRUItem4=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem7=/Game/ThirdPerson/AI/AP_Enemy_AI
+MRUItem8=/Game/ThirdPerson/AI/NewBlendSpace
+MRUItem9=/Game/Resources/PM_Water
+MRUItem10=/Game/ThirdPerson/Input/Actions/IA_Jump
+MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem12=/Game/Resources/SFX/CLANG
+MRUItem13=/Game/Resources/CLANG
+MRUItem14=/Game/Resources/PM_Wood
+MRUItem15=/Game/Resources/PM_Metal
+MRUItem16=/Game/Resources/PM_Grass
+MRUItem17=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
+MRUItem18=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
+MRUItem19=/Game/Characters/Mannequins/Animations/ABP_Quinn
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
@@ -1760,6 +1784,7 @@ MRUItem19=/Engine/BasicShapes/Cube
 /Game/ThirdPerson/AI/AP_Enemy_AI.AP_Enemy_AI=0
 /Game/ThirdPerson/Input/Actions/IA_Jump.IA_Jump=1
 /Game/Resources/PM_Water.PM_Water=1
+/Game/ThirdPerson/AI/BBD_Enemy_AI.BBD_Enemy_AI=1
 
 [/Script/PinnedCommandList.PinnedCommandListSettings]
 Contexts=(Name="AnimationEditor",Commands=)
