--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -323,6 +323,8 @@ WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
+BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup
+SkeletalMeshComponent=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Resources
@@ -400,7 +402,7 @@ LastLevel=/Game/ThirdPerson/Maps/ThirdPersonMap
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
-Object="\"Object\" \"Object.AI.AI|BehaviorTree\" "
+Object="\"Object\" "
 FbxImportUI="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -583,7 +585,7 @@ BP_ThirdPersonCharacter_C=
 Character=
 Pawn=
 BP_ThirdPersonCharacter_Enemy_C="\"Object.Actor.Tags\" "
-BP_EnemyAI_C=
+BP_EnemyAI_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Pawn.Pawn|Input\" \"Object.Replication.ReplicatedMovement\" "
 PawnSensingComponent="\"Object\" "
 NavMeshBoundsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -611,6 +613,9 @@ BTComposite_Sequence="\"Object\" "
 BTTask_MoveTo="\"Object\" "
 BTTask_BlackboardBase="\"Object\" "
 BTTaskNode="\"Object\" "
+BTTask_Roam_C="\"Object\" "
+BTTask_BlueprintBase="\"Object\" "
+BTTask_Wait="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
@@ -621,6 +626,8 @@ OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection.AnimNS_HitDetection
 OpenAssetsAtExit=/Game/Resources/BP_FootstepAnimNotify.BP_FootstepAnimNotify
 OpenAssetsAtExit=/Game/ThirdPerson/AI/BT_Enemy_AI.BT_Enemy_AI
+OpenAssetsAtExit=/Game/ThirdPerson/AI/Tasks/BTTask_Roam.BTTask_Roam
+OpenAssetsAtExit=/Game/ThirdPerson/AI/Enemy_AI_Controller.Enemy_AI_Controller
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1586,6 +1593,34 @@ BTTask_MoveTo.Node=True
 BTTask_MoveTo.Blackboard=True
 BTTask_MoveTo.Task=True
 BTTask_MoveTo.Description=True
+BTTask_Roam_C.Task=True
+BTTask_Roam_C.Description=True
+BTTask_Wait.Wait=True
+BTTask_Wait.Task=True
+BTTask_Wait.Description=True
+Enemy_AI_Controller_C.Tick=True
+Enemy_AI_Controller_C.AI=True
+Enemy_AI_Controller_C.ComponentTick=True
+Enemy_AI_Controller_C.Tags=True
+Enemy_AI_Controller_C.Replication=True
+Enemy_AI_Controller_C.ComponentReplication=True
+Enemy_AI_Controller_C.Activation=True
+Enemy_AI_Controller_C.Variable=True
+Enemy_AI_Controller_C.Cooking=True
+Enemy_AI_Controller_C.Controller=True
+Enemy_AI_Controller_C.Actor=True
+Enemy_AI_Controller_C.Input=True
+Enemy_AI_Controller_C.HLOD=True
+Enemy_AI_Controller_C.Physics=True
+Enemy_AI_Controller_C.WorldPartition=True
+Enemy_AI_Controller_C.Events=True
+BP_EnemyAI_C.SkeletalMesh=True
+BP_EnemyAI_C.Optimization=True
+BP_EnemyAI_C.LOD=True
+BP_EnemyAI_C.MaterialParameters=True
+BP_EnemyAI_C.TextureStreaming=True
+BP_EnemyAI_C.DataLayers=True
+SkeletalMeshComponent.LOD=True
 
 [FBX_Import_UI_Option_FbxImportUI]
 bOverrideFullName=True
@@ -1734,26 +1769,26 @@ RecentlyPlaced=/Game/Collections/DrSFinalJoin7.DrSFinalJoin7;
 RecentlyPlaced=/Game/Collections/DrSFinalJoin6.DrSFinalJoin6;
 
 [ContentBrowserRecent]
-MRUItem0=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
-MRUItem1=/Game/ThirdPerson/AI/BT_Enemy_AI
-MRUItem2=/Game/ThirdPerson/AI/BBD_Enemy_AI
-MRUItem3=/Game/Resources/BP_FootstepAnimNotify
-MRUItem4=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
-MRUItem5=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem7=/Game/ThirdPerson/AI/AP_Enemy_AI
-MRUItem8=/Game/ThirdPerson/AI/NewBlendSpace
-MRUItem9=/Game/Resources/PM_Water
-MRUItem10=/Game/ThirdPerson/Input/Actions/IA_Jump
-MRUItem11=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
-MRUItem12=/Game/Resources/SFX/CLANG
-MRUItem13=/Game/Resources/CLANG
-MRUItem14=/Game/Resources/PM_Wood
-MRUItem15=/Game/Resources/PM_Metal
-MRUItem16=/Game/Resources/PM_Grass
-MRUItem17=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
-MRUItem18=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
-MRUItem19=/Game/Characters/Mannequins/Animations/ABP_Quinn
+MRUItem0=/Game/ThirdPerson/AI/Enemy_AI_Controller
+MRUItem1=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
+MRUItem2=/Game/ThirdPerson/AI/BT_Enemy_AI
+MRUItem3=/Game/ThirdPerson/AI/BBD_Enemy_AI
+MRUItem4=/Game/Resources/BP_FootstepAnimNotify
+MRUItem5=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
+MRUItem6=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
+MRUItem8=/Game/ThirdPerson/AI/AP_Enemy_AI
+MRUItem9=/Game/ThirdPerson/AI/NewBlendSpace
+MRUItem10=/Game/Resources/PM_Water
+MRUItem11=/Game/ThirdPerson/Input/Actions/IA_Jump
+MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
+MRUItem13=/Game/Resources/SFX/CLANG
+MRUItem14=/Game/Resources/CLANG
+MRUItem15=/Game/Resources/PM_Wood
+MRUItem16=/Game/Resources/PM_Metal
+MRUItem17=/Game/Resources/PM_Grass
+MRUItem18=/Game/LevelPrototyping/Materials/MI_PrototypeGrid_TopDark
+MRUItem19=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
 
 [AssetEditorToolkitTabLocation]
 /Game/Characters/Great_Sword_Pack/greatswordattack_UE.greatswordattack_UE=1
