--- a/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/TwoBigSwords/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -319,12 +319,12 @@ TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettin
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.Attack1,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap
 WorldSettings=WorldSettings.WorldPartitionSetup.RuntimeHash
-WorldPartitionRuntimeSpatialHash=
+WorldPartitionRuntimeSpatialHash=WorldSettings.WorldPartitionSetup.RuntimeHash
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Grid Properties,MaterialEditorInstanceConstant.ParameterGroups.Surface Properties
 BoneProxy=BoneProxy.Transforms.Bone,BoneProxy.Transforms.Reference,BoneProxy.Transforms.Mesh Relative
 BlendSpace=BlendSpace.Axis Settings.Horizontal Axis
-BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup
-SkeletalMeshComponent=SkeletalMeshComponent.Physics.ConstraintsGroup
+BP_EnemyAI_C=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+SkeletalMeshComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 CapsuleComponent=
 EditorStyleSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 SlateThemeManager=
@@ -380,6 +380,9 @@ DataValidationSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTexture
 GameplayDebuggerUserSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 GameplayTagsDeveloperSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
 LogVisualizerSettings=EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.MainFrame.SwitchProject
+CharacterMovementComponent=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+EdGraphNode=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
+K2Node_VariableSet=BP_EnemyAI_C.Physics.ConstraintsGroup,SkeletalMeshComponent.Physics.ConstraintsGroup
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/ThirdPerson/Blueprints
@@ -640,7 +643,7 @@ BP_ThirdPersonCharacter_C=
 Character=
 Pawn=
 BP_ThirdPersonCharacter_Enemy_C="\"Object.Actor.Tags\" "
-BP_EnemyAI_C="\"Object.Character.Mesh.Object.Lighting.LightingChannels\" \"Object.Character.Mesh.Object.Collision.BodyInstance\" \"Object.Character.Mesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Character.CharacterMovement.Object.Character Movement (Rotation Settings).RotationRate\" \"Object.Character.CharacterMovement.Object.NavMovement.NavAgentProps\" \"Object.Character.CapsuleComponent.Object.Shape.ShapeColor\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance\" \"Object.Character.CapsuleComponent.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BP_EnemyAI_C=
 PawnSensingComponent="\"Object\" "
 NavMeshBoundsVolume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.Collision.BrushComponent.Object.Collision.BodyInstance\" \"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -726,13 +729,14 @@ GameplayTagsDeveloperSettings="\"Object\" "
 LogVisualizerSettings="\"Object\" \"Object.VisualLogger.GraphsBackgroundColor\" "
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/ThirdPerson/AI/NewBlendSpace.NewBlendSpace
 OpenAssetsAtExit=/Game/ThirdPerson/AI/AP_Enemy_AI.AP_Enemy_AI
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/BP_EnemyAI.BP_EnemyAI
 OpenAssetsAtExit=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection.AnimNS_HitDetection
 OpenAssetsAtExit=/Game/Resources/BP_FootstepAnimNotify.BP_FootstepAnimNotify
 OpenAssetsAtExit=/Game/ThirdPerson/AI/BT_Enemy_AI.BT_Enemy_AI
+OpenAssetsAtExit=/Game/ThirdPerson/AI/BBD_Enemy_AI.BBD_Enemy_AI
 OpenAssetsAtExit=/Game/ThirdPerson/AI/Tasks/BTTask_Roam.BTTask_Roam
 OpenAssetsAtExit=/Game/ThirdPerson/AI/Enemy_AI_Controller.Enemy_AI_Controller
 
@@ -1703,7 +1707,7 @@ BTTask_MoveTo.Description=True
 BTTask_Roam_C.Task=True
 BTTask_Roam_C.Description=True
 BTTask_Wait.Wait=True
-BTTask_Wait.Task=True
+BTTask_Wait.Task=False
 BTTask_Wait.Description=True
 Enemy_AI_Controller_C.Tick=True
 Enemy_AI_Controller_C.AI=True
@@ -2127,13 +2131,13 @@ RecentlyPlaced=/Game/Collections/DrSFinalJoin6.DrSFinalJoin6;
 MRUItem0=/Game/ThirdPerson/AI/Enemy_AI_Controller
 MRUItem1=/Game/ThirdPerson/AI/Tasks/BTTask_Roam
 MRUItem2=/Game/ThirdPerson/AI/BT_Enemy_AI
-MRUItem3=/Game/ThirdPerson/AI/BBD_Enemy_AI
-MRUItem4=/Game/Resources/BP_FootstepAnimNotify
-MRUItem5=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
-MRUItem6=/Game/ThirdPerson/Blueprints/BP_EnemyAI
-MRUItem7=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
-MRUItem8=/Game/ThirdPerson/AI/AP_Enemy_AI
-MRUItem9=/Game/ThirdPerson/AI/NewBlendSpace
+MRUItem3=/Game/Resources/BP_FootstepAnimNotify
+MRUItem4=/Game/ThirdPerson/Blueprints/AnimNS_HitDetection
+MRUItem5=/Game/ThirdPerson/Blueprints/BP_EnemyAI
+MRUItem6=/Game/ThirdPerson/AI/AP_Enemy_AI
+MRUItem7=/Game/ThirdPerson/AI/NewBlendSpace
+MRUItem8=/Game/ThirdPerson/AI/BBD_Enemy_AI
+MRUItem9=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter
 MRUItem10=/Game/Resources/PM_Water
 MRUItem11=/Game/ThirdPerson/Input/Actions/IA_Jump
 MRUItem12=/Game/ThirdPerson/Blueprints/BP_ThirdPersonCharacter_Enemy
@@ -2174,7 +2178,7 @@ MRUItem19=/Game/Characters/Mannequins/Animations/Quinn/MF_Run_Fwd
 /Game/ThirdPerson/AI/AP_Enemy_AI.AP_Enemy_AI=0
 /Game/ThirdPerson/Input/Actions/IA_Jump.IA_Jump=1
 /Game/Resources/PM_Water.PM_Water=1
-/Game/ThirdPerson/AI/BBD_Enemy_AI.BBD_Enemy_AI=1
+/Game/ThirdPerson/AI/BBD_Enemy_AI.BBD_Enemy_AI=0
 /Game/ThirdPerson/AI/BT_Enemy_AI.BT_Enemy_AI=0
 /Game/ThirdPerson/AI/Tasks/BTTask_Roam.BTTask_Roam=0
 /Game/ThirdPerson/AI/Enemy_AI_Controller.Enemy_AI_Controller=0
@@ -2308,7 +2312,7 @@ bShowCellCoords=False
 PerWorldEditorSettings=(("/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap", ()))
 
 [RootWindow]
-ScreenPosition=X=264.000 Y=486.000
+ScreenPosition=X=-2296.000 Y=486.000
 WindowSize=X=1280.000 Y=720.000
 InitiallyMaximized=True
 
